Change network settings and optimize